[package]
name = "oberon"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dirs = "5.0.0"
lazy_static = "1.4.0"
redis = "0.22.3"
serde = {version = "1.0.158", features = ["derive"]}
structopt = "0.3.26"
toml = "0.7.3"
typetag = "0.2.7"

[build-dependencies]
cmake = "0.1.49"
